--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node ."
   },
   "repository": "git@github.com:jden/node-gtfs-zip-proxy.git",
   "license": "ISC",
